# crunch.benchmarking

./: CMakeLists.txt  configure.cmake
include/crunch/benchmarking/: api.hpp  result_sink.hpp  result_table.hpp  result_table_descriptor.hpp  statistical_profiler.hpp  stream_result_sink.hpp
source/: stream_result_sink.cpp
